data-table alignment issue on mobile fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3632,4 +3632,55 @@ span.ha-post-list-icon {
 		-webkit-justify-content: flex-end;
 		        justify-content: flex-end;
 	}
+	.ha-data-table.ha-row-icon-left.ha-row-alignment-left .ha-table__body-row-cell-wrap {
+		-webkit-box-pack: end;
+		-ms-flex-pack: end;
+		-webkit-justify-content: flex-end;
+		        justify-content: flex-end;
+	}
+	.ha-data-table.ha-row-icon-left.ha-row-alignment-center .ha-table__body-row-cell-wrap {
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		-webkit-justify-content: center;
+		        justify-content: center;
+	}
+	.ha-data-table.ha-row-icon-left.ha-row-alignment-right .ha-table__body-row-cell-wrap {
+		-webkit-box-pack: start;
+		-ms-flex-pack: start;
+		-webkit-justify-content: flex-start;
+		        justify-content: flex-start;
+	}
+	.ha-data-table.ha-row-icon-top.ha-row-alignment-left .ha-table__body-row-cell-wrap,
+	.ha-data-table.ha-row-icon-bottom.ha-row-alignment-left .ha-table__body-row-cell-wrap {
+		-webkit-box-align: start;
+		-webkit-align-items: flex-start;
+		        align-items: flex-start;
+		-ms-flex-align: start;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		-webkit-justify-content: center;
+		        justify-content: center;
+	}
+	.ha-data-table.ha-row-icon-top.ha-row-alignment-center .ha-table__body-row-cell-wrap,
+	.ha-data-table.ha-row-icon-bottom.ha-row-alignment-center .ha-table__body-row-cell-wrap {
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		        align-items: center;
+		-ms-flex-align: center;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		-webkit-justify-content: center;
+		        justify-content: center;
+	}
+	.ha-data-table.ha-row-icon-top.ha-row-alignment-right .ha-table__body-row-cell-wrap,
+	.ha-data-table.ha-row-icon-bottom.ha-row-alignment-right .ha-table__body-row-cell-wrap {
+		-webkit-box-align: end;
+		-webkit-align-items: flex-end;
+		        align-items: flex-end;
+		-ms-flex-align: end;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		-webkit-justify-content: center;
+		        justify-content: center;
+	}
 }
